fix: fixed wrap password data-table.css

--- a/src/main/resources/static/styles/data-table.css
+++ b/src/main/resources/static/styles/data-table.css
@@ -121,3 +121,7 @@ span {
 .inpNumber::-webkit-inner-spin-button {
     display: none;
 }
+#userPassword {
+    word-break: break-all;
+    word-wrap: break-word;
+}
